tests/ui/take_on_read_param.stderr
Error [E0203]: `take` passed to a parameter that does not consume
  --> tests/ui/take_on_read_param.lex:7:16
    |
  7 |     greet(take msg);
    |                ^^^
 Why: only `take` parameters accept a moved value at the call site
 Fix: remove `take` or change the parameter to `take`
